--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,2 +1,3 @@
 <header class="container-lg px-3 my-5 markdown-body">
+    <img src="/assets/CDS-SNC-lockup-FED_EN_C.png" alt="CDS-SNC logo" width="300" height="auto" />
 </header>
